--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Marina, Spanic
+                        Marina Spanic
                     </a>
                 </li>
                 <li>
