--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col-md-10 col-md-offset-2 web-title">
-                    <h1>First Last name</h3>
+                    <h1>Marina Spanic</h3>
                     <span>what I do... subtitle</span>    
                 </div>
             </div>
